--- a/WpfApp/Views/MainWindow.xaml
+++ b/WpfApp/Views/MainWindow.xaml
@@ -5,6 +5,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:WpfApp.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:system="clr-namespace:System;assembly=System.Runtime"
     xmlns:vm="clr-namespace:AppViewModels;assembly=AppViewModels"
     Title="WpfApp"
     Width="400"
@@ -16,7 +17,13 @@
         <vm:MainWindowViewModel />
     </Window.DataContext>
 
+    <Window.Resources>
+        <system:String x:Key="MessageResouce">Hello😊🐶</system:String>
+    </Window.Resources>
+
     <DockPanel Margin="20">
+        <TextBlock DockPanel.Dock="Top" Text="{StaticResource MessageResouce}" />
+
         <StackPanel DockPanel.Dock="Top" Orientation="Horizontal">
             <CheckBox
                 VerticalAlignment="Center"
