--- a/AvaloniaApp/App.axaml
+++ b/AvaloniaApp/App.axaml
@@ -8,6 +8,6 @@
     </Application.DataTemplates>
 
     <Application.Styles>
-        <FluentTheme Mode="Light" />
+        <SimpleTheme />
     </Application.Styles>
 </Application>
