--- a/WpfApp/Views/MainWindow.xaml
+++ b/WpfApp/Views/MainWindow.xaml
@@ -56,12 +56,14 @@
 
         <TextBlock
             HorizontalAlignment="Center"
+            DockPanel.Dock="Top"
             FontSize="24"
             FontWeight="Bold">
             <Run Text="Value1 * Value2 = " />
             <Run Text="{Binding Answer, Mode=OneWay}" TextDecorations="Underline" />
         </TextBlock>
 
+        <TextBox />
     </DockPanel>
 
 </Window>
